--- a/day1/step3-dom-create-modification-delete.html
+++ b/day1/step3-dom-create-modification-delete.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script/main-step3.js"></script>
     <style>
         .container{
             width: 900px;
@@ -25,12 +26,6 @@
 <body>
     <button>Add Box</button>
     <hr>
-    <div class="container">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-    </div>
+    <div class="container"></div>
 </body>
 </html>
