--- a/day1/step3-dom-create-modification-delete.html
+++ b/day1/step3-dom-create-modification-delete.html
@@ -25,6 +25,7 @@
 </head>
 <body>
     <button>Add Box</button>
+    <button>Stop Adding Box</button>
     <hr>
     <div class="container"></div>
 </body>
