--- a/day1/step2-helloworld.html
+++ b/day1/step2-helloworld.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        function init(){
-            document.getElementsByTagName("h1")[2].innerText = "Welcome to your life"
-        };
-        // window.onload = init;
-        document.addEventListener("DOMContentLoaded", init);
-    </script>
+    <script src="script/main.js"></script>
 </head>
 <body>
     <h1>1</h1>
