--- a/day1/step7-functional-improvements.html
+++ b/day1/step7-functional-improvements.html
@@ -32,6 +32,7 @@
         */
         
         // rest parameters
+        /*         
         function adder(...nums){
             var total = 0;
             for(var i = 0; i < nums.length; i++){
@@ -44,7 +45,20 @@
         console.log(adder(5,6,7));// ??? 
         console.log(adder(5,6,7,8));// ??? 
         console.log(adder(5,6,7,8,9));// ??? 
-        console.log(adder(5,6,7,8,9,10));// ??? 
+        console.log(adder(5,6,7,8,9,10));// ???  
+        */
+
+       // rest parameters
+        function adder(...nums){
+            var total = 0;
+            for(var i = 0; i < nums.length; i++){
+                total += nums[i];
+            }
+            return total;
+        }; 
+        var favnums = [5,6,7,8,9,10];
+        // spread syntax
+        console.log(adder(...favnums));// ??? 
     </script>
 </head>
 <body>
