--- a/day1/step8-arrow-fun.html
+++ b/day1/step8-arrow-fun.html
@@ -25,9 +25,9 @@
         */ 
         // var adder2 = (num1, num2) => num1 + num2 ; 
 
-        var adder2 = num1 => num1 + num1 ; 
+        var adder2 = (...nums) => nums[0] + nums[1] ; 
 
-        console.log(adder2(5));
+        console.log(adder2(5,6));
     </script>
 </head>
 <body>
