--- a/day1/step9-arrow-function-more.html
+++ b/day1/step9-arrow-function-more.html
@@ -22,9 +22,9 @@
             }
         }; 
         */
-       /*  var getCostPrice = function(){
-         return 10000;
-        } */
+        var getCostPrice = function(){
+         return 5000;
+        } 
         var cart = {
             name : "My Cart",
             getCostPrice : () => {
